Created the MainMenu widget.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -46,7 +46,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/Wimbledon
+LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.12-17.23.04
@@ -5066,7 +5066,7 @@ BP_ExplosiveBarrel_C.Geometry=True
 BP_ExplosiveBarrel_C.Surface Properties=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -5286,8 +5286,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" "
+Widget=
+Visual=
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -5459,26 +5459,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/maps/Wimbledon
-MRUItem1=/Game/Level/maps/Blockout_P
-MRUItem2=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem3=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem4=/Game/GameModes/BP_TestGameMode
-MRUItem5=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem6=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem7=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem8=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem9=/Game/Objects/Weapons/BP_Shotgun
-MRUItem10=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem11=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
-MRUItem12=/Game/Objects/Powerups/VisualEffects/sunflare
-MRUItem13=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
-MRUItem14=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
-MRUItem15=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
-MRUItem16=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
-MRUItem17=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
-MRUItem18=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
-MRUItem19=/Game/Objects/Powerups/Pickup/BP_PowerupPickup
+MRUItem0=/Game/UI/WBP_MainMenu
+MRUItem1=/Game/Level/maps/Wimbledon
+MRUItem2=/Game/Level/maps/Blockout_P
+MRUItem3=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem4=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem5=/Game/GameModes/BP_TestGameMode
+MRUItem6=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem7=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem8=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem9=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem10=/Game/Objects/Weapons/BP_Shotgun
+MRUItem11=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem12=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem13=/Game/Objects/Powerups/VisualEffects/sunflare
+MRUItem14=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
+MRUItem15=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
+MRUItem16=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
+MRUItem17=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
+MRUItem18=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
+MRUItem19=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
