Created a new level for the main menu and assigned the main menu inside the level blueprint. Assigned the main menu level as the project default and reset the game mode. Now every level has to override the game mode in order to use the one we created.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -46,7 +46,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/VoidMap
+LastLevel=/Game/Level/maps/MainMenu
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.12-17.23.04
@@ -5064,10 +5064,32 @@ Pawn.Actor=True
 BP_ExplosiveBarrel_C.Surface Materials=True
 BP_ExplosiveBarrel_C.Geometry=True
 BP_ExplosiveBarrel_C.Surface Properties=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+VoidMap_C.Tick=True
+VoidMap_C.Replication=True
+VoidMap_C.Input=True
+VoidMap_C.Actor=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Input=True
+MainMenu_C.Actor=True
+EditorKeyboardShortcutSettings.3DTransformTrack=True
+EditorKeyboardShortcutSettings.CameraCutTrack=True
+EditorKeyboardShortcutSettings.UMGEditor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/UI/WBP_MainMenu.WBP_MainMenu
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5151,11 +5173,12 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/Wimbledon
-MRUItem1=/Game/Level/maps/Blockout_P
-MRUItem2=/Game/Level/maps/VoidMap
-MRUItem3=/Game/Level/maps/TestMap
-MRUItem4=/Game/maps/VoidMap
+MRUItem0=/Game/Level/maps/MainMenu
+MRUItem1=/Game/Level/maps/VoidMap
+MRUItem2=/Game/Level/maps/Wimbledon
+MRUItem3=/Game/Level/maps/Blockout_P
+MRUItem4=/Game/Level/maps/TestMap
+MRUItem5=/Game/maps/VoidMap
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRight,InputSettings.Bindings.AxisMappings.Crouch,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Zoom,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,
@@ -5221,7 +5244,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindin
 BP_PlayerPawn_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 K2Node_VariableGet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,
-K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+K2Node_VariableSet=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 ObjectProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 BP_GrenadeProjectile_C=BP_GrenadeProjectile_C.Collision.Collision,
@@ -5257,10 +5280,13 @@ FloatProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering
 Service_SelectATargetActor_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 Decorator_ReaminingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 Decorator_RemainingHealth_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+WBP_MainMenu_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+PlayerController=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5286,8 +5312,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -5435,6 +5461,9 @@ REINST_BP_PlayerPawn_C_83="\"Object.Components.camera.Object.PostProcess.PostPro
 REINST_BP_PlayerPawn_C_93="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_103="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_109="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Objects/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
@@ -5459,26 +5488,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_MainMenu
-MRUItem1=/Game/Level/maps/Wimbledon
-MRUItem2=/Game/Level/maps/Blockout_P
-MRUItem3=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem4=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem5=/Game/GameModes/BP_TestGameMode
-MRUItem6=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem7=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem8=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem9=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem10=/Game/Objects/Weapons/BP_Shotgun
-MRUItem11=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem12=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
-MRUItem13=/Game/Objects/Powerups/VisualEffects/sunflare
-MRUItem14=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
-MRUItem15=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
-MRUItem16=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
-MRUItem17=/Game/Objects/Powerups/SoundEffects/Pickup_weapon_Cue
-MRUItem18=/Game/Objects/Powerups/SoundEffects/powerupPickup_Cue
-MRUItem19=/Game/Objects/Powerups/Pickup/BP_WeaponPickup
+MRUItem0=/Game/Level/maps/MainMenu
+MRUItem1=/Game/Level/maps/VoidMap
+MRUItem2=/Game/Level/maps/Wimbledon
+MRUItem3=/Game/Level/maps/Blockout_P
+MRUItem4=/Game/Level/maps/TestMap
+MRUItem5=/Game/UI/WBP_MainMenu
+MRUItem6=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem7=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem8=/Game/GameModes/BP_TestGameMode
+MRUItem9=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem10=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem11=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem12=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem13=/Game/Objects/Weapons/BP_Shotgun
+MRUItem14=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem15=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem16=/Game/Objects/Powerups/VisualEffects/sunflare
+MRUItem17=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
+MRUItem18=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
+MRUItem19=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5725,7 +5754,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [WidgetTemplatesExpanded]
-Input=False
+Input=True
 Lists=False
 Misc=False
 Optimization=False
