--- a/CoopGame/Config/DefaultEngine.ini
+++ b/CoopGame/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Level/maps/VoidMap.VoidMap
 GameDefaultMap=/Game/Level/maps/VoidMap.VoidMap
-GlobalDefaultGameMode=/Game/GameModes/BP_TestGameMode.BP_TestGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -115,5 +115,3 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="FleshDefault")
 +PhysicalSurfaces=(Type=SurfaceType2,Name="FleshVulnerable")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
