Created a level selection menu that's spawned when the player clicks on Play inside the main menu.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -5085,11 +5085,50 @@ MainMenu_C.Actor=True
 EditorKeyboardShortcutSettings.3DTransformTrack=True
 EditorKeyboardShortcutSettings.CameraCutTrack=True
 EditorKeyboardShortcutSettings.UMGEditor=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+WBP_MainMenu_C.Appearance=True
+WBP_MainMenu_C.Designer=True
+WBP_MainMenu_C.Input=True
+WBP_MainMenu_C.Interaction=True
+WBP_MainMenu_C.Performance=True
+WBP_MainMenu_C.Layout=True
+WBP_MainMenu_C.Behavior=True
+WBP_MainMenu_C.Render Transform=True
+WBP_MainMenu_C.Clipping=True
+WBP_MainMenu_C.Navigation=True
+WBP_MainMenu_C.Localization=True
+ScrollBox.Layout=True
+ScrollBox.Style=True
+ScrollBox.Scroll=True
+ScrollBox.Behavior=True
+ScrollBox.Render Transform=True
+ScrollBox.Performance=True
+ScrollBox.Clipping=True
+ScrollBox.Navigation=True
+ScrollBox.Localization=True
+WBP_LevelSelectMenu_C.Appearance=True
+WBP_LevelSelectMenu_C.Designer=True
+WBP_LevelSelectMenu_C.Input=True
+WBP_LevelSelectMenu_C.Interaction=True
+WBP_LevelSelectMenu_C.Performance=True
+WBP_LevelSelectMenu_C.Layout=True
+WBP_LevelSelectMenu_C.Behavior=True
+WBP_LevelSelectMenu_C.Render Transform=True
+WBP_LevelSelectMenu_C.Clipping=True
+WBP_LevelSelectMenu_C.Navigation=True
+WBP_LevelSelectMenu_C.Localization=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/UI/WBP_MainMenu.WBP_MainMenu
+OpenAssetsAtExit=/Game/Level/maps/MainMenu.MainMenu:PersistentLevel.MainMenu
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5286,7 +5325,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5312,8 +5351,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -5464,6 +5503,8 @@ REINST_BP_PlayerPawn_C_109="\"Object.Components.camera.Object.PostProcess.PostPr
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+WBP_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" "
+WBP_LevelSelectMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Objects/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
@@ -5488,26 +5529,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/maps/MainMenu
-MRUItem1=/Game/Level/maps/VoidMap
-MRUItem2=/Game/Level/maps/Wimbledon
-MRUItem3=/Game/Level/maps/Blockout_P
-MRUItem4=/Game/Level/maps/TestMap
-MRUItem5=/Game/UI/WBP_MainMenu
-MRUItem6=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem7=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem8=/Game/GameModes/BP_TestGameMode
-MRUItem9=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem10=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem11=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem12=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem13=/Game/Objects/Weapons/BP_Shotgun
-MRUItem14=/Game/Objects/Weapons/BP_GrenadeLaucnher
-MRUItem15=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
-MRUItem16=/Game/Objects/Powerups/VisualEffects/sunflare
-MRUItem17=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
-MRUItem18=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
-MRUItem19=/Game/Objects/Powerups/VisualEffects/S_SandSwirl
+MRUItem0=/Game/UI/WBP_LevelSelectMenu
+MRUItem1=/Game/Level/maps/MainMenu
+MRUItem2=/Game/Level/maps/VoidMap
+MRUItem3=/Game/Level/maps/Wimbledon
+MRUItem4=/Game/Level/maps/Blockout_P
+MRUItem5=/Game/Level/maps/TestMap
+MRUItem6=/Game/UI/WBP_MainMenu
+MRUItem7=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem8=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem9=/Game/GameModes/BP_TestGameMode
+MRUItem10=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem11=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem12=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem13=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem14=/Game/Objects/Weapons/BP_Shotgun
+MRUItem15=/Game/Objects/Weapons/BP_GrenadeLaucnher
+MRUItem16=/Game/Objects/Powerups/VisualEffects/P_gold_ore_aura
+MRUItem17=/Game/Objects/Powerups/VisualEffects/sunflare
+MRUItem18=/Game/Objects/Powerups/VisualEffects/T_Fire_tile
+MRUItem19=/Game/Objects/Powerups/VisualEffects/T_Flame_Tile
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
